RESOLVED FIXED276796
[Flex] Perform more precise invalidation of flex items with percent logical height
https://bugs.webkit.org/show_bug.cgi?id=276796
Summary [Flex] Perform more precise invalidation of flex items with percent logical h...
Sammy Gill
Reported 2024-07-18 13:25:39 PDT
Currently in updateFlexItemDirtyBitsBeforeLayout, which gets called in RenderFlexibleBox::layoutAndPlaceFlexItems, we will invalidate a clean flex item if one of its logical height properties is percent based. We can make this invalidation more precise by trying to determine if an undamaged item will end up having the same value for its logical height
Attachments
Radar WebKit Bug Importer
Comment 1 2024-07-18 13:25:55 PDT
Sammy Gill
Comment 2 2024-07-18 14:01:06 PDT
EWS
Comment 3 2025-03-18 11:25:26 PDT
Committed 292314@main (8e50dd5daa89): <https://commits.webkit.org/292314@main> Reviewed commits have been landed. Closing PR #30979 and removing active labels.
Sammy Gill
Comment 4 2025-03-18 13:28:04 PDT
Note You need to log in before you can comment on or make changes to this bug.