[Flex] Perform more precise invalidation of flex items with percent logical height. https://bugs.webkit.org/show_bug.cgi?id=276796 rdar://132034177

Reviewed by NOBODY (OOPS!).

In RenderFlexibleBox::layoutAndPlaceFlexItems we would call
updateFlexItemDirtyBitsBeforeLayout which would invalidate any
undamaged flex item which had a percent value for any of its logical
height properties.

Instead, we can try to be a bit more strict on these types of items
by checking to see if its logical height will compute to a different
value than what was previously computed. This is done by going through
each of the undamaged flex items before we begin flex layout and trying
to resolve its logical height via computeLogicalHeightWithoutLayout. If
we end up computing a different value than what is stored on the
renderer, which could happen due to a change in the constrained imposed
upon the flexbox for example, then we will mark the flex item as needing
layout.

* Source/WebCore/rendering/RenderFlexibleBox.cpp:
(WebCore::RenderFlexibleBox::layoutBlock):
(WebCore::RenderFlexibleBox::invalidateFlexItemsBeforeLayout):
(WebCore::RenderFlexibleBox::layoutAndPlaceFlexItems):
(WebCore::updateFlexItemDirtyBitsBeforeLayout): Deleted.
* Source/WebCore/rendering/RenderFlexibleBox.h: